refactor: simplify custom footer by removing copyright text for cleaner design

--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,8 +1,5 @@
 <!-- Custom footer to override Just the Docs default footer -->
 
 <footer>
-  <p class="text-small text-grey-dk-000 mb-0">
-    Copyright &copy; {{ site.time | date: '%Y' }} {{ site.title }}. 
-    <!-- Default Just the Docs footer text removed -->
-  </p>
+  <p class="text-small text-grey-dk-000 mb-0">  </p>
 </footer>
